@@ -7,7 +7,7 @@
 ## Title: |ceb00f1tralce|r's Collectible Keybinds
 ## Description: Add keybindings for Tools, Assistants, Companions, and Mementos.
 ## Author: @tralce and @code65536
-## Version: 2023-03-13
+## Version: 2023-03-16
 ## APIVersion: 101037
 ## OptionalDependsOn: VotansKeybinder
 
