@@ -1,3 +1,6 @@
+v2023-03-16
+Added Aderine, Fargrave Dregs Dealer. Thanks, bearbelly!
+
 v2023-03-13
 API update
 
